--- a/SPRNetTool/View/Widgets/PlaceHolderTextBox.xaml
+++ b/SPRNetTool/View/Widgets/PlaceHolderTextBox.xaml
@@ -28,7 +28,7 @@
 				 BorderThickness="0"
 				 VerticalAlignment="Center"
 				 Margin="0,0,5,0"
-				 CaretBrush="{StaticResource ResourceKey={x:Static def:Definitions.ForegroundLevel1}}"
+				 CaretBrush="{StaticResource ResourceKey={x:Static def:Definitions.ButtonAndIconBrushLevel0}}"
 				 VerticalContentAlignment="Center"
 				 Padding="5" />
 	</Grid>
