--- a/SPRNetTool/View/Widgets/WindowTitleBar.xaml
+++ b/SPRNetTool/View/Widgets/WindowTitleBar.xaml
@@ -20,7 +20,7 @@
 				<Trigger Property="IsMouseOver"
 						 Value="True">
 					<Setter Property="Foreground"
-							Value="{StaticResource ResourceKey={x:Static def:Definitions.ForegroundLevel0}}" />
+							Value="{StaticResource ResourceKey={x:Static def:Definitions.TextForegroundBrushLevel0}}" />
 				</Trigger>
 			</Style.Triggers>
 			<Setter Property="WindowChrome.IsHitTestVisibleInChrome"
@@ -34,7 +34,7 @@
 			<Setter Property="VerticalAlignment"
 					Value="Stretch" />
 			<Setter Property="Foreground"
-					Value="{StaticResource ResourceKey={x:Static def:Definitions.ForegroundLevel1}}" />
+					Value="{StaticResource ResourceKey={x:Static def:Definitions.ButtonAndIconBrushLevel0}}" />
 			<Setter Property="Template">
 				<Setter.Value>
 					<ControlTemplate TargetType="{x:Type Button}">
@@ -223,7 +223,7 @@
 			<Setter Property="Foreground"
 					Value="White" />
 			<Setter Property="BorderBrush"
-					Value="{StaticResource ResourceKey={x:Static def:Definitions.ForegroundLevel1}}" />
+					Value="{StaticResource ResourceKey={x:Static def:Definitions.ButtonAndIconBrushLevel0}}" />
 
 			<Style.Triggers>
 				<Trigger Property="IsHighlighted"
@@ -241,7 +241,7 @@
 
 	</UserControl.Resources>
 	<Border BorderThickness="0,0,0,1"
-			BorderBrush="{StaticResource ResourceKey={x:Static def:Definitions.BackgroundLevel10}}">
+			BorderBrush="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_4}}">
 		<Grid Background="{StaticResource ResourceKey={x:Static def:Definitions.MenuItemBackground}}"
 			  x:Name="ContainerGrid">
 			<Grid.ColumnDefinitions>
