--- a/SPRNetTool/View/Pages/PakEditorPage.xaml
+++ b/SPRNetTool/View/Pages/PakEditorPage.xaml
@@ -382,12 +382,11 @@
 					</StackPanel>
 				</Grid>
 			</Border>
-			
+
 			<Grid Grid.Column="5"
 				  Grid.Row="1"
 				  Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel1}}">
-				<ListBox Margin="15,0"
-						 Background="Transparent"
+				<ListBox Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}"
 						 BorderThickness="0"
 						 ItemsSource="{Binding CurrentSelectedPakFile.PakBlocks}"
 						 VirtualizingStackPanel.IsVirtualizing="True"
@@ -398,34 +397,39 @@
 							<Setter Property="Template">
 								<Setter.Value>
 									<ControlTemplate TargetType="ListBoxItem">
-										<Border BorderThickness="0,0,0,2"
-												BorderBrush="#FF353535"
-												Background="#FF262626"
-												Height="80">
-											<StackPanel Orientation="Vertical">
-												<TextBlock Margin="0,12,0,0">
-													<Run Text="Tên khối:"
-														 Foreground="White"
-														 FontWeight="Bold"
-														 FontSize="16" />
-													<Run Text="{Binding BlockName}"
-														 Foreground="White"
-														 FontSize="16" />
-												</TextBlock>
-												<TextBlock Margin="0,6,0,0">
-													<Run Text="Định dạng:"
-														 Foreground="#FF7B8797"
-														 FontSize="12" />
-													<Run Text="{Binding BlockType, Mode=OneWayToSource}"
-														 Foreground="White"
-														 FontSize="16" />
-												</TextBlock>
-												<TextBlock  Margin="0,3,0,0">
-													<Run Text="{Binding BlockSize, Mode=OneWayToSource}"
-														 Foreground="#FF7B8797"
-														 FontSize="12" />
-												</TextBlock>
-											</StackPanel>
+										<Border Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}">
+											<Grid>
+												<Rectangle Height="2"
+														   Fill="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_4}}"
+														   Margin="10,0"
+														   VerticalAlignment="Bottom"/>
+												<StackPanel Orientation="Vertical"
+															Margin="12,0,0,0">
+													<TextBlock Margin="0,12,0,0">
+														<Run Text=""
+															 Foreground="White"
+															 FontWeight="Bold"
+															 FontSize="16" />
+														<Run Text="{Binding BlockName}"
+															 Foreground="White"
+															 FontSize="16" />
+													</TextBlock>
+													<TextBlock Margin="0,7,0,0">
+														<Run Text="Định dạng:"
+															 Foreground="#FF7B8797"
+															 FontSize="12" />
+														<Run Text="{Binding BlockType, Mode=OneWay}"
+															 Foreground="White"
+															 FontSize="16" />
+													</TextBlock>
+													<TextBlock  Margin="0,0,0,14">
+														<Run Text="{Binding BlockSize, Mode=OneWay}"
+															 Foreground="#FF7B8797"
+															 FontSize="12" />
+													</TextBlock>
+												</StackPanel>
+											</Grid>
+
 
 										</Border>
 									</ControlTemplate>
